# secure-remote-password

./: .gitignore  README.md  dune-project  srp.opam
lib/: README.md  client.ml  client.mli  dune  server.ml  server.mli  types.ml  utils.ml  utils.mli
test/: dune  test_srp.ml
